2009-01-10 Fix bug in pan/zoom with log coordinates. - EF

2009-01-10 Applied Michiel's hatch patch for macosx backend and
           draw_idle patch for qt.  Closes sf patched 2497785 and
           2468809 - JDH

2009-01-10 Fix bug in pan/zoom with log coordinates. - EF

2009-01-06 Fix bug in setting of dashed negative contours. - EF

2009-01-06 Be fault tolerant when len(linestyles)>NLev in contour. - MM

2009-01-06 Added marginals kwarg to hexbin to plot marginal densities
           JDH

2009-01-06 Change user-visible multipage pdf object to PdfPages to
           avoid accidents with the file-like PdfFile. - JKS

2009-01-05 Fix a bug in pdf usetex: allow using non-embedded fonts. - JKS

2009-01-05 optional use of preview.sty in usetex mode. - JJL

2009-01-02 Allow multipage pdf files. - JKS

2008-12-31 Improve pdf usetex by adding support for font effects
           (slanting and extending). - JKS

2008-12-29 Fix a bug in pdf usetex support, which occurred if the same
           Type-1 font was used with different encodings, e.g. with
           Minion Pro and MnSymbol. - JKS

2008-12-20 fix the dpi-dependent offset of Shadow. - JJL

2008-12-20 fix the hatch bug in the pdf backend. minor update
           in docs and  example - JJL

2008-12-19 Add axes_locator attribute in Axes. Two examples are added.
           - JJL

2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also
           updated to describe chages in keyword parameters.
           Issue a warning if old keyword parameters are used. - JJL

2008-12-18 add new arrow style, a line + filled triangles. -JJL

==================================================================
2008-12-18 Re-Released 0.98.5.2 from v0_98_5_maint at r6679
           Released 0.98.5.2 from v0_98_5_maint at r6667

2008-12-18 Removed configobj, experimental traits and doc/mpl_data link - JDH

2008-12-18 Fix bug where a line with NULL data limits prevents