@@ -1,3 +1,6 @@
+2009-01-16 Applied Michiel's patch for macosx backend to fix rounding
+           bug. Closed sf bug 2508440 - JSW
+
 2009-01-10 Fix bug in pan/zoom with log coordinates. - EF
 
 2009-01-10 Applied Michiel's hatch patch for macosx backend and
